Ignore IDEA related files.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,14 @@
 #############################################################################
 
 #############################################################################
+# Intellij IDEA related files
+#############################################################################
+
+**/*.iml
+**/.idea/
+**/*.jar
+
+#############################################################################
 # Eclipse related files
 #############################################################################
 
